fixed exhibits and blurriness

--- a/sf-nextjs/src/app/globals.css
+++ b/sf-nextjs/src/app/globals.css
@@ -89,3 +89,8 @@ body {
 .info-container {
   margin-top: 20px;
 }
+
+.blue-link {
+  color: #0070f3;
+  text-decoration: underline;
+}
